--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1414.0",
+    "aws-sdk": "^2.1436.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.5",
+    "razorpay": "^2.9.2",
     "sequelize": "^6.32.0",
     "uuidv4": "^6.2.13"
   }
